--- a/01_HTML/10_Img.html
+++ b/01_HTML/10_Img.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div style="width: 250px; height: 250px; border: 2px solid;">   <!-- scr: 이미지경로 alt: 이미지가 문제 생겼을 시 대체-->
+        <a href="https://naver.com" target="_blank">
+        <!-- <img src="./10cat.jpg" alt="고양이 사진" /> -->
+        <img style="width: 100%;height: 100%;" src="https://cdn.pixabay.com/photo/2019/11/08/11/56/kitten-4611189_1280.jpg" alt="고양이 사진">
+        </a>
+    </div>
 </body>
 </html>
