--- a/01_HTML/14_Form.html
+++ b/01_HTML/14_Form.html
@@ -20,6 +20,35 @@
             margin: 0;
             padding: 0;
         }
+        .btn{
+            border: 1px solid gray;
+            min-width: 80px;
+            height: 100%;
+            line-height: 35px;
+            text-align: center;
+            font-size: 0.8rem;
+        }
+        .btn-submit{
+            width: 100%;
+            background-color: royalblue;
+            color: white;
+            border: 0;
+        }
+        .top-header{
+            height: 15px !important;
+            background-color: black !important;
+
+        }
+        .title{
+            margin-bottom: 20px !important;
+            border-bottom: 1px solid gray;
+            padding-bottom:10px ;
+        }
+        .title>h2{
+            width:100%;
+            text-align: center;
+            font-size: 2rem;
+        }
 
         /* form */
 
@@ -33,7 +62,7 @@
             display:flex;
             justify-content:left;
             align-items:center;
-            gap:5px;
+            gap: 5px;
             height:35px;
         }
         form>.row>label{
@@ -41,6 +70,17 @@
             min-width:85px;
             height:100%;
             line-height:35px;
+            /* border: 1px solid; */
+        }
+        form>.row>input[type="text"],
+        form>.row>input[type="password"],
+        form>.row>select
+        {
+            height: 100%;
+            width: 100%;
+            outline:none;
+            border-radius: 0;
+            border: 1px solid gray;
         }
 
     </style> 
@@ -60,17 +100,18 @@
     -->
 
     <form action="/test.jsp" method="post">
-        <div class="row">
+        <div class="row top-header">
 
         </div>
 
-            <div class="row">
+        <div class="row title">
                 <h2>회원가입</h2>
-            </div>    
+        </div>  
+          
         <div class="row">
             <label>아이디</label> <!-- 인라인형-->
             <input name="userid" type="text"/>
-            <a href="javescript:void(0)">중복확인</a>
+            <a class="btn" href="javescript:void(0)">중복확인</a>
         </div>
 
         <div class="row">
@@ -91,7 +132,7 @@
         <div class="row">
             <label>우편번호</label>
             <input name="zipcode" type="text"/>
-            <a href="javascript:void(0)">검색</a>
+            <a class="btn" href="javascript:void(0)">검색</a>
         </div>
 
         <div class="row">
@@ -163,14 +204,15 @@
         <div class="row">
             <input id="email-recv" type="checkbox"> 
             <label for="email-recv">이메일 수신에 동의합니다.</label>
-            <div>
-            <input id="sms-recv" type="checkbox"> 
-            <label for="sms-recv">SMS 수신합니다.</label>
-            </div>
         </div>
 
         <div class="row">
-            <input type="submit" value="회원가입"/>
+            <input id="sms-recv" type="checkbox"> 
+            <label for="sms-recv">SMS 수신합니다.</label>
+            </div>
+
+        <div class="row">
+            <input class="btn btn-submit" type="submit" value="회원가입"/>
         </div>
 
         
