--- a/02_CSS/04_Position/대구특별시 상단메인메뉴.html
+++ b/02_CSS/04_Position/대구특별시 상단메인메뉴.html
@@ -11,7 +11,7 @@
   * {
     box-sizing: border-box;
     margin: 0; padding: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
     font-size: 16px;
   }
 
