--- a/03_JS/02_TYPE/02_Object.html
+++ b/03_JS/02_TYPE/02_Object.html
@@ -87,6 +87,7 @@
         console.log(poppi.age);
         console.log(poppi.weight);
         poppi.name='토리';
+        poppi["color"] = "black"
         poppi.toString();
 
     </script>
