--- a/01_HTML/06_Table.html
+++ b/01_HTML/06_Table.html
@@ -19,27 +19,26 @@
 </head>
 <hr>
     <!-- 기본 -->
-    <table border="1" width="400px" align="center">
+    <table border="1" width="800px" align="center">
     <caption>기본테이블</caption>
         <tr>
-            <th>열제목1</th>
+            <th style="width: 200px;">열제목1</th>
             <th>열제목2</th>
-            <th>열제목3</th>
         </tr>
         <tr>
             <td>VALUE1</td>
             <td>VALUE2</td>
-            <td>VALUE3</td>
+
         </tr>
         <tr>
             <td>VALUE1</td>
             <td>VALUE2</td>
-            <td>VALUE3</td>
+
         </tr>
         <tr>
             <td>VALUE1</td>
             <td>VALUE2</td>
-            <td>VALUE3</td>
+
         </tr>
     </table>
     <hr/>
